{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 13,
  "lineage": "0f34e894-319b-ae28-27b1-5a68c9c079f1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "joinscaler_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c235890bfaf55288",
            "arn": "arn:aws:ec2:us-east-1:975050120043:elastic-ip/eipalloc-0c235890bfaf55288",
            "domain": "vpc",
            "id": "eipalloc-0c235890bfaf55288",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-158-71-46.compute-1.amazonaws.com",
            "public_ip": "54.158.71.46",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Joinscaler-EIP"
            },
            "tags_all": {
              "Name": "Joinscaler-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "joinscaler_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:975050120043:instance/i-063c41128327858c2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063c41128327858c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "joinscaler-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09ea4e8725b58936a",
            "private_dns": "ip-10-0-1-139.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.139",
            "public_dns": "ec2-44-211-223-123.compute-1.amazonaws.com",
            "public_ip": "44.211.223.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "Joinscaler-Root-Volume"
                },
                "tags_all": {
                  "Name": "Joinscaler-Root-Volume"
                },
                "throughput": 0,
                "volume_id": "vol-06f4939cf6bae3ac8",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef0e8a590b5c15ba",
            "tags": {
              "Environment": "Production",
              "Managed_by": "Terraform",
              "Name": "Joinscaler-EC2-2",
              "Project": "Joinscaler"
            },
            "tags_all": {
              "Environment": "Production",
              "Managed_by": "Terraform",
              "Name": "Joinscaler-EC2-2",
              "Project": "Joinscaler"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "10m",
              "delete": "10m"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e5bc0ac6f7454542"
            ]
          },
          "dependencies": [
            "aws_key_pair.joinscaler_key_pair",
            "aws_security_group.joinscaler_sg",
            "aws_subnet.joinscaler_subnet",
            "aws_vpc.joinscaler_vpc",
            "tls_private_key.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "joinscaler_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050120043:internet-gateway/igw-0d25723eb6ec9773e",
            "id": "igw-0d25723eb6ec9773e",
            "owner_id": "975050120043",
            "tags": {
              "Name": "Joinscaler-Internet-Gateway"
            },
            "tags_all": {
              "Name": "Joinscaler-Internet-Gateway"
            },
            "vpc_id": "vpc-0a4797b316dfae740"
          },
          "dependencies": [
            "aws_vpc.joinscaler_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "joinscaler_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050120043:route-table/rtb-0ace0bd59ef5e56d1",
            "id": "rtb-0ace0bd59ef5e56d1",
            "owner_id": "975050120043",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d25723eb6ec9773e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Joinscaler-Route-Table"
            },
            "tags_all": {
              "Name": "Joinscaler-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4797b316dfae740"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.joinscaler_igw",
            "aws_vpc.joinscaler_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "joinscaler_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0552ca5dc52226968",
            "route_table_id": "rtb-0ace0bd59ef5e56d1",
            "subnet_id": "subnet-0ef0e8a590b5c15ba"
          },
          "dependencies": [
            "aws_internet_gateway.joinscaler_igw",
            "aws_route_table.joinscaler_route_table",
            "aws_subnet.joinscaler_subnet",
            "aws_vpc.joinscaler_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "joinscaler_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050120043:security-group/sg-0e5bc0ac6f7454542",
            "description": "Security group for Joinscaler WordPress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5bc0ac6f7454542",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "joinscaler-security-group",
            "name_prefix": "",
            "owner_id": "975050120043",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Joinscaler-Security-Group"
            },
            "tags_all": {
              "Name": "Joinscaler-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a4797b316dfae740"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.joinscaler_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "joinscaler_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050120043:subnet/subnet-0ef0e8a590b5c15ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef0e8a590b5c15ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "975050120043",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Joinscaler-Subnet"
            },
            "tags_all": {
              "Name": "Joinscaler-Subnet"
            },
            "vpc_id": "vpc-0a4797b316dfae740"
          },
          "dependencies": [
            "aws_vpc.joinscaler_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "joinscaler_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050120043:vpc/vpc-0a4797b316dfae740",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02b6c6e3523b21973",
            "default_route_table_id": "rtb-00a26963a79943f2a",
            "default_security_group_id": "sg-095002ed7563dc932",
            "dhcp_options_id": "dopt-024c956c00de7dc34",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a4797b316dfae740",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00a26963a79943f2a",
            "owner_id": "975050120043",
            "tags": {
              "Name": "Joinscaler-VPC"
            },
            "tags_all": {
              "Name": "Joinscaler-VPC"
            }
          }
        }
      ]
    }
  ]
}